--- a/src/main/resources/com/example/together/settings-view.fxml
+++ b/src/main/resources/com/example/together/settings-view.fxml
@@ -1,58 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import org.kordamp.ikonli.javafx.*?>
 
-<BorderPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.SettingsController">
-    <left>
-        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
+<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.SettingsController">
+    <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+        <left>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
+                <children>
+                    <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                            <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40" />
+                        </graphic>
+                    </Button>
+                    <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+                        <children>
+                            <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
+                                <graphic>
+                                    <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40" />
+                                </graphic>
+                            </Button>
+                            <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
+                                <graphic>
+                                    <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40" />
+                                </graphic>
+                            </Button>
+                            <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
+                                <graphic>
+                                    <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40" />
+                                </graphic>
+                            </Button>
+                        </children>
+                        <padding>
+                            <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                        </padding>
+                    </VBox>
+                </children>
+                <VBox.margin>
+                    <Insets top="15.0" />
+                </VBox.margin>
+                <padding>
+                    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                </padding>
+            </VBox>
+        </left>
+        <center>
+            <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0" spacing="40.0" BorderPane.alignment="CENTER">
+                <children>
+                    <Button mnemonicParsing="false" onAction="#logOut" text="Log out">
+                        <styleClass>
+                            <String fx:value="darkButton" />
+                            <String fx:value="roboto-medium" />
+                        </styleClass>
+                        <font>
+                            <Font size="24.0" />
+                        </font></Button>
+                    <Button mnemonicParsing="false" onAction="#deleteAllTasks" text="Delete all tasks">
+                  <styleClass>
+                     <String fx:value="lightButton" />
+                     <String fx:value="roboto-regular" />
+                  </styleClass></Button>
+                    <Button mnemonicParsing="false" onAction="#leaveAllGroups" text="Leave all groups">
+                  <styleClass>
+                     <String fx:value="lightButton" />
+                     <String fx:value="roboto-regular" />
+                  </styleClass></Button>
+                </children>
+                <BorderPane.margin>
+                    <Insets bottom="80.0" left="80.0" right="80.0" top="80.0" />
+                </BorderPane.margin>
+            </VBox>
+        </center>
+    </BorderPane>
+   <VBox fx:id="confirmPopup" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: FFF6ED;">
+      <styleClass>
+         <String fx:value="drop-shadow" />
+         <String fx:value="popupBox" />
+      </styleClass>
+      <children>
+         <Label styleClass="roboto-bold" text="THIS ACTION CANNOT BE UNDONE. Are you sure you want to proceed?" textAlignment="CENTER" wrapText="true">
+            <font>
+               <Font size="24.0" />
+            </font>
+         </Label>
+         <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
             <children>
-                <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
-                    <graphic>
-                        <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40" />
-                    </graphic>
-                </Button>
-                <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
-                    <children>
-                        <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
-                            <graphic>
-                                <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40" />
-                            </graphic>
-                        </Button>
-                        <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
-                            <graphic>
-                                <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40" />
-                            </graphic>
-                        </Button>
-                        <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
-                            <graphic>
-                                <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40" />
-                            </graphic>
-                        </Button>
-                    </children>
-                    <padding>
-                        <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
-                    </padding>
-                </VBox>
+               <Button onAction="#confirmAction" mnemonicParsing="false" text="Yes">
+                  <font>
+                     <Font size="18.0" />
+                  </font>
+                  <styleClass>
+                     <String fx:value="roboto-medium" />
+                     <String fx:value="lightButton" />
+                  </styleClass>
+               </Button>
+               <Button onAction="#dismissPopup" mnemonicParsing="false" text="No">
+                  <font>
+                     <Font size="18.0" />
+                  </font>
+                  <styleClass>
+                     <String fx:value="roboto-medium" />
+                     <String fx:value="darkButton" />
+                  </styleClass>
+               </Button>
             </children>
-            <VBox.margin>
-                <Insets top="15.0" />
-            </VBox.margin>
-            <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-            </padding>
-        </VBox>
-    </left>
-   <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" styleClass="lightButton" text="Log out" />
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="80.0" left="80.0" right="80.0" top="80.0" />
-         </BorderPane.margin>
-      </VBox>
-   </center>
-</BorderPane>
+         </HBox>
+      </children>
+   </VBox>
+</StackPane>
